Added To-Do-List app

--- a/index.html
+++ b/index.html
@@ -90,11 +90,14 @@
                             features like adding, editing, deleting, and marking tasks as complete.
                         </p>
                         <div class="flex gap-4 text-blue-600 text-sm">
-                            <a href="/" target="_blank" class="hover:underline">Live</a>
-                            <a href="/" target="_blank" class="hover:underline">GitHub</a>
+                            <a href="https://to-do-app-j4tw.onrender.com/" target="_blank"
+                                class="hover:underline">Live</a>
+                            <a href="https://github.com/IsaacRid/portfolio" target="_blank"
+                                class="hover:underline">GitHub</a>
                         </div>
                     </div>
-                    <img src="/1_web_portfolio/public" alt="Project Image" class="w-full h-40 object-cover" />
+                    <img src="/1_web_portfolio/public/Capture.PNG" alt="Project Image"
+                        class="w-full h-40 object-cover" />
                 </div>
             </div>
         </section>
