--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="flex gap-4 text-blue-600 text-sm">
                             <a href="https://to-do-app-j4tw.onrender.com/" target="_blank"
                                 class="hover:underline">Live</a>
-                            <a href="https://github.com/IsaacRid/portfolio" target="_blank"
+                            <a href="https://github.com/IsaacRid/to-do-app-2" target="_blank"
                                 class="hover:underline">GitHub</a>
                         </div>
                     </div>
