--- a/index.html
+++ b/index.html
@@ -124,6 +124,38 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h2 class="text-2xl font-semibold mb-6 text-gray-900">
+                Latest Certificates
+            </h2>
+            <div class="grid gap-6 sm:grid-cols-2">
+                <div class="bg-white rounded-xl shadow-md overflow-hidden">
+                    <div class="p-4 space-y-2">
+                        <p class="text-sm text-gray-500">31/10/2025</p>
+                        <h4 class="text-xl font-semibold">LinkedIn Learning: Git Essential Training</h4>
+                        <div class="flex gap-2 flex-wrap">
+                            <span class="bg-blue-100 text-blue-700 px-2 py-1 rounded text-sm">Git</span>
+                            <span class="bg-blue-100 text-blue-700 px-2 py-1 rounded text-sm">Version Control</span>
+                        </div>
+                        <p class="text-gray-600 text-sm">
+                            Completed a comprehensive course on Git, covering key concepts for version control and
+                            collaboration.<br><br>
+
+                            Skills Acquired: Version Control, Git<br><br>
+
+                            Key Learnings: Installation and configuration of Git, setting up and pushing code into
+                            repositories, committing changes, branching and merging, troubleshooting common errors, and
+                            using GitHub Codespaces for cloud development.
+
+                        </p>
+                        <div class="flex gap-4 text-blue-600 text-sm">
+                            <a href="" target="_blank" class="hover:underline">Certificate</a>
+                        </div>
+                    </div>
+                    <img src="./public/Capture.PNG" alt="Project Image" class="w-full h-40 object-cover" />
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="text-center py-6 mt-12 border-t border-gray-200 text-gray-600 text-sm">
