--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="bg-white rounded-xl shadow-md overflow-hidden">
                     <div class="p-4 space-y-2">
-                        <p class="text-sm text-gray-500">31/10/2025</p>
+                        <p class="text-sm text-gray-500">5/11/2025</p>
                         <h4 class="text-xl font-semibold">E-commerce App</h4>
                         <div class="flex gap-2 flex-wrap">
                             <span class="bg-blue-100 text-blue-700 px-2 py-1 rounded text-sm">ReactJS</span>
@@ -111,16 +111,15 @@
                         </div>
                         <p class="text-gray-600 text-sm">
                             A full-stack e-commerce application allowing users to sign up, log in, browse products, add
-                            them to a cart, and complete purchases.
+                            them to a cart, and complete purchases. Unable to deploy as ran out of free hosting
+                            services, however all code is available to run locally via GitHub.
                         </p>
                         <div class="flex gap-4 text-blue-600 text-sm">
-                            <a href="https://e-commerce-app-j4tw.onrender.com/" target="_blank"
-                                class="hover:underline">Live</a>
-                            <a href="https://github.com/IsaacRid/e-commerce-app" target="_blank"
+                            <a href="https://github.com/IsaacRid/e-commerce-store" target="_blank"
                                 class="hover:underline">GitHub</a>
                         </div>
                     </div>
-                    <img src="" alt="Project Image" class="w-full h-40 object-cover" />
+                    <img src="./public/Capture1.PNG" alt="Project Image" class="w-full h-40 object-cover" />
                 </div>
             </div>
         </section>
